Changed URL structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
         {% endif %}
 
         <ul>
-          <li>  <a href="/pages/reading_list">Reading List</a> </li>
-          <li> <a href="/pages/mudd">MUDD</a></li>
+          <li>  <a class="page-link" href="{{ "/pages/reading_list" | prepend: site.baseurl | prepend: site.url }}">Reading List</a> </li>
+          <li> <a class="page-link" href="{{ "/pages/mudd" | prepend: site.baseurl | prepend: site.url }}">MUDD</a></li>
         </ul>
 
 
